<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/selectedHotel"
    tools:context="appdev.playover.CheckIn"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ExpandableListView
            android:id="@+id/lstAlsoCheckedIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:background="#99E3FF"></ExpandableListView>
    </LinearLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/txtHotelName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="start"
            />
        <TextView
            android:id="@+id/txtHotelAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="start"
            />

        <Button
            android:id="@+id/txtCheckoutSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="end"
            android:background="#4CAF50"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            android:text="@string/check_out_hotel"
            android:textColor="@color/offWhitePalette" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alsoCheckedIn"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            />
    </GridLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/recycler_view_also_checked_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:forceHasOverlappingRendering="false"
            />
    </LinearLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="vertical"
        android:rowCount="1"
        android:layout_gravity="fill_horizontal">

        <Button
            android:id="@+id/messageSelectedBtn"
            android:layout_width="125dp"
            android:layout_height="35dp"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="#606D72"
            android:text="@string/send_message"
            android:textColor="@android:color/white" />

        <!--<Button-->
            <!--android:id="@+id/messageAllBtn"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="50dp"-->
            <!--android:layout_column="1"-->
            <!--android:text="@string/messageAll"-->
            <!--android:layout_gravity="fill"-->
            <!--android:layout_columnWeight="1"-->
            <!--/>-->
    </GridLayout>
</LinearLayout>
</ScrollView>